--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         This line is added on github!
 
-        <div class="footer">
+        <div class="footer footer1">
         	footer
         </div>
 
